--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.3.1",
     "@mdx-js/loader": "^1.0.21",
     "@next/mdx": "^8.1.0",
     "@zeit/next-css": "^1.0.1",
